# ERL_Second_Assignment

./: README.md
navigation2/nav2_bringup/bringup/params/: nav2_params.yaml
planning/: CMakeLists.txt  package.xml
planning/launch/: action_nodes_launch.py  planning_launch.py  prova_launch.py
planning/pddl/: Prova.pddl  domain.pddl  prova.pddl
planning/src/: detect.cpp  fake_move.cpp  fake_move2.cpp  move.cpp  move_in_order.cpp  move_to_lowest_id.cpp
robot_urdf/: setup.py
robot_urdf/launch/: gazebo.launch.py  gazebo_assignment.launch.py
robot_urdf/robot_urdf/: control_camera.py  control_robot_vel.py
robot_urdf/urdf/: robot5.gazebo
robot_urdf/worlds/: aruco.world
ros2_aruco/ros2_aruco/: package.xml  setup.py
ros2_aruco/ros2_aruco/ros2_aruco/: aruco_node.py  detect_service_node.py
ros2_aruco/ros2_aruco_interfaces/: CMakeLists.txt
ros2_aruco/ros2_aruco_interfaces/srv/: GetMapData.srv
slam_toolbox/config/: mapper_params_online_sync.yaml
