cmake_minimum_required(VERSION 3.5)
project(planning)


find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(rclcpp_action REQUIRED)
find_package(plansys2_msgs REQUIRED)
find_package(plansys2_executor REQUIRED)
find_package(geometry_msgs REQUIRED)
find_package(nav2_msgs REQUIRED)
find_package(ros2_aruco_interfaces REQUIRED)

set(CMAKE_CXX_STANDARD 17)

set(dependencies
    rclcpp
    rclcpp_action
    plansys2_msgs
    plansys2_executor
    geometry_msgs
    nav2_msgs
    ros2_aruco_interfaces
)

add_executable(move_node src/move.cpp)
ament_target_dependencies(move_node ${dependencies})

add_executable(detect_node src/detect.cpp)
ament_target_dependencies(detect_node ${dependencies})

add_executable(move_in_order_node src/move_in_order.cpp)
ament_target_dependencies(move_in_order_node ${dependencies})

install(DIRECTORY launch pddl DESTINATION share/${PROJECT_NAME})

install(TARGETS
  move_node
  detect_node
  move_in_order_node
  ARCHIVE DESTINATION lib
  LIBRARY DESTINATION lib
  RUNTIME DESTINATION lib/${PROJECT_NAME}
)

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  ament_lint_auto_find_test_dependencies()

  find_package(ament_cmake_gtest REQUIRED)
endif()

ament_export_dependencies(${dependencies})

ament_package()
